include/my_handler_errors.h
@@ -94,7 +94,8 @@ static const char *handler_error_messages[]=
   "Operation was interrupted by end user (probably kill command?)",
   "Disk full",
   "Incompatible key or row definition between the MariaDB .frm file and the information in the storage engine. You have to dump and restore the table to fix this",
-  "Too many words in a FTS phrase or proximity search"
+  "Too many words in a FTS phrase or proximity search",
+  "Table encrypted but decryption failed. This could be because correct encryption management plugin is not loaded, used encryption key is not available or encryption method does not match."
 };
 
 #endif /* MYSYS_MY_HANDLER_ERRORS_INCLUDED */
