storage/innobase/handler/handler0alter.cc
@@ -4179,8 +4179,8 @@ oom:
 			 : ha_alter_info->key_info_buffer[
 				 prebuilt->trx->error_key_num].name);
 		break;
-	case DB_ENCRYPTED_DECRYPT_FAILED:
-		my_error(ER_NO_SUCH_TABLE_IN_ENGINE, MYF(0),
+	case DB_DECRYPTION_FAILED:
+		my_error(ER_DECRYPTION_FAILED, MYF(0),
 			table_share->db.str, table_share->table_name.str);
 		break;
 	default:
